<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- <string name="app_name">分销主站V3.3</string> -->
    <string name="app_name">分销门户</string>
    <string name="title">分销门户V3.3</string>
    <string name="yijijifen">一级分销</string>
    <string name="erjijifen">二级分销</string>
    <string name="sanjijifen">三级分销</string>
    <string name="search_hint">请输入搜索关键字</string>
    <string name="one">1</string>
    <string name="setup">设置</string>
    <string name="sousuo">搜索</string>
    <string name="gouwuche">购物车</string>
    <string name="gerenzhongxin">个人中心</string>
    <string name="hi">嗨~你好</string>
    <string name="daizhifu">待付款</string>
    <string name="daifahuo">已发货</string>
    <string name="quanbudingdan">全部订单</string>
    <string name="shouhuodizhi">收货地址</string>
    <string name="qushaidan">去晒单</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="zongji">总计：</string>
    <string name="jiesuan">结算</string>
    <string name="guanyu">关于</string>
    <string name="wutubanben">无图版本</string>
    <string name="qingchuhuancun">清除缓存图片</string>
    <string name="check_version">检测版本更新</string>
    <string name="shouye">首页</string>
    <string name="faxian">发现</string>
    <string name="zhuye">主页</string>
    <string name="zhuce">注册</string>
    <string name="selectagent">选择分销商</string>
    <string name="denglu">登录</string>
    <string name="username">用户名</string>
    <string name="password">请输入密码</string>
    <string name="password2">请再次输入密码</string>
    <string name="auto_login">自动登录</string>
    <string name="agree">同意</string>
    <string name="agreement">《用户注册协议》</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="user_agree">用户协议</string>
    <string name="product_list">商品列表</string>
    <string name="sale_number">销量</string>
    <string name="price">价格</string>
    <string name="time">时间</string>
    <string name="result_null">没有搜索结果</string>
    <string name="result_no">没有找到相关商品，请尝试其他商品吧</string>
    <string name="about">关于</string>
    <string name="product_details">商品详细</string>
    <string name="product_detail">商品信息</string>
    <string name="addto_cart">加入购物车</string>
    <string name="nowto_buy">立即购买</string>
    <string name="zero">￥0.00</string>
    <string name="pingfen">评分：0</string>
    <string name="peisong">配送至</string>
    <string name="pingjia">商品评价</string>
    <string name="area">地区</string>
    <string name="comment">评价</string>
    <string name="relevant_product">相关商品</string>
    <string name="show_order">晒单</string>
    <string name="sure">确定</string>
    <string name="product_name">商品名称</string>
    <string name="buy_num">购买数量</string>
    <string name="add">+</string>
    <string name="dec">-</string>
    <string name="member_collect">我的收藏</string>
    <string name="member_message">我的消息</string>
    <string name="no_info">暂无信息</string>
    <string name="no_message">暂无消息</string>
    <string name="no_address">暂无地址</string>
    <string name="no_collect">暂无收藏</string>
    <string name="no_comment">暂无评价</string>
    <string name="no_order">暂无订单</string>
    <string name="no_show">暂无商品</string>
    <string name="address">收货地址</string>
    <string name="address_edit">新增收货地址</string>
    <string name="address_detail">请输入详细地址</string>
    <string name="address_city">请选择省市区</string>
    <string name="address_mobile">请输入有效手机号</string>
    <string name="address_email">请输入有效邮箱</string>
    <string name="address_name">请输入收货人姓名</string>
    <string name="delete">删除</string>
    <string name="order_all">全部订单</string>
    <string name="order_info">订单详情</string>
    <string name="order_post">提交订单</string>
    <string name="order_state">订单状态</string>
    <string name="order_time">下单时间</string>
    <string name="order_number">订单编号</string>
    <string name="topay">立即付款</string>
    <string name="logistics">查看物流</string>
    <string name="delete_order">删除订单</string>
    <string name="no_content">购物车空空如也</string>
    <string name="payment">支付方式</string>
    <string name="payment_type">支付类型</string>
    <string name="dispatch">配送方式</string>
    <string name="ClientToSellerMsg">订单留言</string>
    <string name="DispatchPrice">运费</string>
    <string name="should_pay">实付款：</string>
    <string name="choose">请选择</string>
    <string name="input_password">请输入支付密码</string>
    <string name="msg_detail">消息详情</string>
    <string name="pay_fee">支付费用</string>
    <string name="about1">For Android V3.1.2</string>
    <string name="about2">ICP证书或ICP备案证书号</string>
    <string name="about3">武汉群翔软件有限公司</string>
    <string name="brand_center">品牌中心</string>
    <string name="brand_all">全部品牌</string>
    <string name="brand_big">推荐大牌</string>
    <string name="get_score">领积分</string>
    <string name="score">积分</string>
    <string name="advance_payment">预存款</string>
    <string name="score_pay">积分余额</string>
    <string name="score_detail">积分明细</string>
    <string name="pwd_login">修改登录密码</string>
    <string name="pwd_pay">设置支付密码</string>
    <string name="pwd_input">输入支付密码</string>
    <string name="post">提交</string>
    <string name="pwd1">旧密码</string>
    <string name="pwd2">新密码</string>
    <string name="end_time">剩余时间：</string>
    <string name="use_score">使用积分</string>
    <string name="input_score">输入整百积分</string>
    <string name="refund_goods">申请退货</string>
    <string name="refund_reason">退货原因：</string>
    <string name="order_show">晒单</string>
    <string name="order_title">标题：</string>
    <string name="order_shop">购物心得：</string>
    <string name="product_show">商品晒单</string>
    <string name="edit_company">填写物流公司</string>
    <string name="refund_company">退货物流公司:</string>
    <string name="number_company">物流编号:</string>
    <string name="number_limit">200字以内</string>
    <string name="number_limit50">50字以内</string>
    <string name="number_edit">修改购买数量</string>
    <string name="insure_price">保价费用</string>
    <string name="order_fee1">商品总计</string>
    <string name="order_fee2">运费</string>
    <string name="order_fee3">保价费用</string>
    <string name="order_fee4">积分抵现</string>
    <string name="order_fee5">实付款(含运费)</string>
    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>

</resources>