<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shortcut"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shortbg"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/menu1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:background="@drawable/shortcutbg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/shortcut1"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/zhuye"
            android:textColor="@color/black" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="@drawable/menu_line"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/menu2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:background="@drawable/shortcutbg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/shortcut2"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/gerenzhongxin"
            android:textColor="@color/black" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="@drawable/menu_line"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/menu3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:background="@drawable/shortcutbg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/shortcut3"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/gouwuche"
            android:textColor="@color/black" />
        
        <ImageView
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/point_red"
            android:contentDescription="@null" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="@drawable/menu_line"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/menu4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:background="@drawable/shortcutbg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/shortcut4"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/setup"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>